# mini-crm-ai-gen

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
app/: Dockerfile  main.py
app/api/: dependencies.py  helpers.py  middleware.py
app/api/v1/: __init__.py  activities.py  analytics.py  auth.py  contacts.py  deals.py  organizations.py  tasks.py
app/core/: cache.py  config.py  database.py  exceptions.py  jwt.py  security.py
app/core/permissions/: __init__.py  compat.py  deal_permissions.py  member_permissions.py  resource_permissions.py  strategies.py
app/models/: __init__.py  activity.py  base.py  contact.py  deal.py  organization.py  organization_member.py  task.py  user.py
app/repositories/: __init__.py  activity_repository.py  base.py  contact_repository.py  deal_repository.py  organization_member_repository.py  organization_repository.py  protocols.py  task_repository.py  user_repository.py
app/schemas/: __init__.py  activity_schemas.py  analytics_schemas.py  auth_schemas.py  base.py  contact_schemas.py  deal_schemas.py  organization_schemas.py  task_schemas.py
app/services/: __init__.py  activity_service.py  analytics_service.py  auth_service.py  contact_service.py  deal_service.py  deal_stage_manager.py  organization_service.py  task_service.py
docs/: API.md  CONTRIBUTING.md  CORS_CONFIGURATION.md  DEVELOPMENT.md  EXAMPLES.md  FEATURES.md  INSTALLATION.md  SECURITY.md  SOLID_REFACTORING_REPORT.md  TECH_STACK.md  TODO-IMPLEMENTATION-PLAN.md  crm-system-generation-prompt.md  crm-system-pipelines.md  deployment.md  final_test_report.md  senior-python-crm-assignment.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py  907fbefc5bd8_convert_deal_status_and_stage_to_.py
tests/: ai_test_plan.md  conftest.py
tests/integration/: test_activities_api.py  test_analytics_api.py  test_auth_api.py  test_contacts_api.py  test_deals_api.py  test_full_scenario_e2e.py  test_organizations_api.py  test_tasks_api.py
tests/unit/: test_jwt.py  test_permissions.py  test_security.py
